--- a/pkg/config/envs/dev.env
+++ b/pkg/config/envs/dev.env
@@ -1,3 +1,3 @@
 PORT=:50053
-DB_URL=postgres://kevin@localhost:5432/order_svc
+DB_URL=postgres://developer:dev123@localhost:5432/order_svc
 PRODUCT_SVC_URL=localhost:50052
